--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
         
         <div class="tab">
             <button class="tablinks" onclick="openTab(event, 'daily-entry')" data-translate="dailyEntry">Daily Entry</button>
+            <button class="tablinks" onclick="openTab(event, 'recipes')" data-translate="recipes">Recipes</button>
             <button class="tablinks" onclick="openTab(event, 'inventory')" data-translate="inventory">Inventory</button>
             <button class="tablinks" onclick="openTab(event, 'expenses')" data-translate="expenses">Expenses</button>
             <button class="tablinks" onclick="openTab(event, 'reports')" data-translate="reports">Reports</button>
@@ -442,6 +443,12 @@
                 </div>
         </div>
 
+        <div id="recipes" class="tabcontent">
+            <h2 data-translate="recipes">Recipes</h2>
+            <div id="recipes-content">
+            </div>
+        </div>
+
         <div id="inventory" class="tabcontent">
             <h2 data-translate="inventory">Inventory</h2>
             <div id="inventory-content">
@@ -464,6 +471,7 @@
         let savedReports = [];
         let expenses = [];
         let inventory = [];
+        let recipes = [];
 
         // Set today's date on page load
         document.addEventListener('DOMContentLoaded', function() {
@@ -480,6 +488,10 @@
             if (storedInventory) {
                 inventory = JSON.parse(storedInventory);
             }
+            const storedRecipes = localStorage.getItem('recipes');
+            if (storedRecipes) {
+                recipes = JSON.parse(storedRecipes);
+            }
             addExpenseRow(); // Add an initial expense row
             updateSavedReportsList();
             loadInventory();
@@ -491,6 +503,7 @@
                 title: "📊 Restaurant Daily Accounting System",
                 reportDate: "Report Date:",
                 dailySales: "💰 Daily Sales Report",
+                recipes: "Recipes",
                 expenses: "Expenses",
                 platform: "Platform",
                 grossSales: "Gross Sales (TRY)",
@@ -562,6 +575,7 @@
                 title: "📊 نظام المحاسبة اليومية للمطاعم",
                 reportDate: "تاريخ التقرير:",
                 dailySales: "💰 تقرير المبيعات اليومي",
+                recipes: "وصفات",
                 expenses: "المصاريف",
                 platform: "المنصة",
                 grossSales: "إجمالي المبيعات (ليرة تركية)",
@@ -1272,6 +1286,8 @@
                 generateExpensesTab();
             } else if (tabName === 'inventory') {
                 generateInventoryTab();
+            } else if (tabName === 'recipes') {
+                generateRecipesTab();
             }
         }
 
@@ -1332,6 +1348,26 @@
             const reportTitle = document.getElementById('reports-monthly-report-title').textContent;
             const table = document.getElementById('reports-monthly-report-table');
             const wb = XLSX.utils.table_to_book(table, {sheet: "Summary"});
+            const ws = wb.Sheets["Summary"];
+
+            // Add some basic styling
+            const headerStyle = { font: { bold: true, sz: 14, color: { rgb: "FFFFFF" } }, fill: { fgColor: { rgb: "4F81BD" } } };
+            const totalStyle = { font: { bold: true }, fill: { fgColor: { rgb: "F2F2F2" } } };
+
+            // Find the rows to style
+            for (const cell in ws) {
+                if (cell.startsWith('A')) {
+                    if (ws[cell].v === 'Income' || ws[cell].v === 'Expenses' || ws[cell].v === 'Inventory' || ws[cell].v === 'Summary') {
+                        ws[cell].s = headerStyle;
+                        ws['B' + cell.substring(1)].s = headerStyle;
+                    }
+                    if (ws[cell].v.includes('Total')) {
+                        ws[cell].s = totalStyle;
+                        ws['B' + cell.substring(1)].s = totalStyle;
+                    }
+                }
+            }
+
             XLSX.writeFile(wb, `${reportTitle}.xlsx`);
         }
 
@@ -1420,16 +1456,16 @@
             expensesToProcess.forEach(expense => {
                 const amount = parseFloat(expense.amount) || 0;
                 totalExpenses += amount;
-                if (expensesByCategory[expense.category]) {
+                if (expense.category in expensesByCategory) {
                     expensesByCategory[expense.category] += amount;
                 } else {
-                    expensesByCategory[expense.category] = amount;
+                    expensesByCategory.other += amount;
                 }
             });
             
             let inventoryValue = 0;
             inventory.forEach(item => {
-                inventoryValue += (parseFloat(item.quantity) || 0) * (parseFloat(item.cost) || 0);
+                inventoryValue += (parseFloat(item.quantity) || 0) * (parseFloat(item.costPerUnit) || 0);
             });
 
             const netProfit = income.total - totalExpenses;
@@ -1471,7 +1507,70 @@
             `;
             table.innerHTML = tableHTML;
 
+            // Add profitability analysis to the report
+            let profitabilityHTML = '<thead><tr><th colspan="4">Product Profitability</th></tr></thead><tbody>';
+            profitabilityHTML += '<tr><th>Product</th><th>Sales</th><th>Cost</th><th>Profit</th></tr>';
+
+            let productSales = {};
+            reportsToProcess.forEach(report => {
+                const salesData = report.sales.inStore?.productSales || [];
+                salesData.forEach(item => {
+                    if (productSales[item.name]) {
+                        productSales[item.name].quantity += parseInt(item.quantity);
+                        productSales[item.name].total += parseFloat(item.total);
+                    } else {
+                        productSales[item.name] = {
+                            quantity: parseInt(item.quantity),
+                            total: parseFloat(item.total)
+                        };
+                    }
+                });
+            });
+
+            for (const productName in productSales) {
+                const recipe = recipes.find(r => r.name === productName);
+                if (recipe) {
+                    const cost = calculateProductCost(recipe) * productSales[productName].quantity;
+                    const profit = productSales[productName].total - cost;
+                    profitabilityHTML += `<tr><td>${productName}</td><td>${productSales[productName].total.toFixed(2)}</td><td>${cost.toFixed(2)}</td><td>${profit.toFixed(2)}</td></tr>`;
+                }
+            }
+            profitabilityHTML += '</tbody>';
+            table.innerHTML += profitabilityHTML;
+
             document.getElementById('reports-monthly-report-container').style.display = 'block';
+        }
+
+        function generateRecipesTab() {
+            const recipesContent = document.getElementById('recipes-content');
+            const lang = document.getElementById('language-selector').value;
+            const t = translations[lang];
+
+            let recipesHTML = `
+                <div class="section">
+                    <h2>Add New Recipe</h2>
+                    <form id="recipe-form" onsubmit="addRecipe(event)">
+                        <div class="form-grid">
+                            <div>
+                                <label for="recipe-name">Menu Item</label>
+                                <input type="text" id="recipe-name" required>
+                            </div>
+                        </div>
+                        <h3>Ingredients</h3>
+                        <div id="recipe-ingredients"></div>
+                        <button type="button" class="btn" onclick="addRecipeIngredient()">+ Add Ingredient</button>
+                        <hr>
+                        <button type="submit" class="btn">Save Recipe</button>
+                    </form>
+                </div>
+                <div class="section">
+                    <h2>All Recipes</h2>
+                    <div id="recipes-table-container"></div>
+                </div>
+            `;
+            recipesContent.innerHTML = recipesHTML;
+            addRecipeIngredient();
+            renderRecipesTable();
         }
 
         function generateInventoryTab() {
@@ -1492,6 +1591,14 @@
                             <div>
                                 <label for="inventory-unit">Unit</label>
                                 <input type="text" id="inventory-unit" placeholder="e.g., kg, pcs" required>
+                            </div>
+                            <div>
+                                <label for="inventory-total-cost">Total Cost</label>
+                                <input type="number" id="inventory-total-cost" required>
+                            </div>
+                            <div>
+                                <label for="inventory-units-per-package">Units per Package</label>
+                                <input type="number" id="inventory-units-per-package" required>
                             </div>
                         </div>
                         <button type="submit" class="btn">Add Item</button>
@@ -1733,11 +1840,18 @@
 
         function addInventory(event) {
             event.preventDefault();
+            const totalCost = parseFloat(document.getElementById('inventory-total-cost').value);
+            const unitsPerPackage = parseInt(document.getElementById('inventory-units-per-package').value);
+            const costPerUnit = totalCost / unitsPerPackage;
+
             const newItem = {
                 id: Date.now(),
                 name: document.getElementById('inventory-name').value,
                 quantity: document.getElementById('inventory-quantity').value,
                 unit: document.getElementById('inventory-unit').value,
+                totalCost: totalCost,
+                unitsPerPackage: unitsPerPackage,
+                costPerUnit: costPerUnit
             };
             inventory.push(newItem);
             localStorage.setItem('inventory', JSON.stringify(inventory));
@@ -1757,6 +1871,7 @@
                             <th>Item Name</th>
                             <th>Quantity</th>
                             <th>Unit</th>
+                            <th>Cost per Unit</th>
                             <th></th>
                         </tr>
                     </thead>
@@ -1766,6 +1881,7 @@
                                 <td>${item.name}</td>
                                 <td><input type="number" value="${item.quantity}" onchange="updateInventoryQuantity(${item.id}, this.value)"></td>
                                 <td>${item.unit}</td>
+                                <td>${(item.costPerUnit || 0).toFixed(2)}</td>
                                 <td><button class="btn" onclick="deleteInventoryItem(${item.id})">Delete</button></td>
                             </tr>
                         `).join('')}
@@ -1782,6 +1898,91 @@
                 localStorage.setItem('inventory', JSON.stringify(inventory));
                 showNotification('Quantity updated!', 'success');
             }
+        }
+
+        function addRecipe(event) {
+            event.preventDefault();
+            const recipeName = document.getElementById('recipe-name').value;
+            const ingredients = [];
+            document.querySelectorAll('#recipe-ingredients .form-grid').forEach(row => {
+                const ingredientId = row.querySelector('.recipe-ingredient-name').value;
+                const quantity = row.querySelector('.recipe-ingredient-quantity').value;
+                ingredients.push({ id: ingredientId, quantity: quantity });
+            });
+
+            const newRecipe = {
+                id: Date.now(),
+                name: recipeName,
+                ingredients: ingredients
+            };
+            recipes.push(newRecipe);
+            localStorage.setItem('recipes', JSON.stringify(recipes));
+            document.getElementById('recipe-form').reset();
+            renderRecipesTable();
+            showNotification('Recipe saved!', 'success');
+        }
+
+        function renderRecipesTable() {
+            const tableContainer = document.getElementById('recipes-table-container');
+            if (!tableContainer) return;
+
+            let tableHTML = `
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Recipe Name</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        ${recipes.map(recipe => `
+                            <tr>
+                                <td>${recipe.name}</td>
+                                <td><button class="btn" onclick="deleteRecipe(${recipe.id})">Delete</button></td>
+                            </tr>
+                        `).join('')}
+                    </tbody>
+                </table>
+            `;
+            tableContainer.innerHTML = tableHTML;
+        }
+
+        function calculateProductCost(recipe) {
+            let cost = 0;
+            recipe.ingredients.forEach(ingredient => {
+                const inventoryItem = inventory.find(item => item.id == ingredient.id);
+                if (inventoryItem) {
+                    cost += (parseFloat(inventoryItem.costPerUnit) || 0) * (parseFloat(ingredient.quantity) || 0);
+                }
+            });
+            return cost;
+        }
+
+        function deleteRecipe(id) {
+            recipes = recipes.filter(recipe => recipe.id !== id);
+            localStorage.setItem('recipes', JSON.stringify(recipes));
+            renderRecipesTable();
+            showNotification('Recipe deleted!', 'success');
+        }
+
+        function addRecipeIngredient() {
+            const ingredientsContainer = document.getElementById('recipe-ingredients');
+            const newIngredient = document.createElement('div');
+            newIngredient.classList.add('form-grid');
+            newIngredient.innerHTML = `
+                <div>
+                    <label>Ingredient</label>
+                    <select class="recipe-ingredient-name" required>
+                        ${inventory.map(item => `<option value="${item.id}">${item.name}</option>`).join('')}
+                    </select>
+                </div>
+                <div>
+                    <label>Quantity</label>
+                    <input type="number" class="recipe-ingredient-quantity" required>
+                </div>
+                <button type="button" class="btn" onclick="this.parentElement.remove()">-</button>
+            `;
+            ingredientsContainer.appendChild(newIngredient);
         }
 
         function deleteInventoryItem(id) {
