--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 </div>
                 <div class="summary-item">
                     <p><strong data-translate="cashInStore">Cash in Store:</strong> <input type="number" class="input-field" id="cash-in-store"></p>
-                    <p><strong data-translate="cashWithAbdelhamid">Cash with Abdelhamid:</strong> <input type="number" class="input-field" id="cash-with-abdelhamid"></p>
+                    <p><strong data-translate="cashWithAbdelhamid">فرق الكاصه:</strong> <input type="number" class="input-field" id="cash-with-abdelhamid"></p>
                 </div>
                 <div class="summary-item">
                     <p><strong data-translate="complimentary">Complimentary:</strong> <span id="summary-complimentary">0.00</span> TRY</p>
@@ -553,7 +553,7 @@
                 addItem: "+ Add Item",
                 inventoryValue: "Inventory Value",
                 cashInStore: "Cash in Store",
-                cashWithAbdelhamid: "Cash with Abdelhamid",
+                cashWithAbdelhamid: "فرق الكاصه",
                 complimentary: "Complimentary",
                 productSales: "📈 Product Sales",
                 productName: "Product Name",
