--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                 addItem: "+ إضافة عنصر",
                 inventoryValue: "قيمة المخزون",
                 cashInStore: "النقد في المتجر",
-                cashWithAbdelhamid: "النقد مع عبد الحميد",
+                cashWithAbdelhamid: "فرق الكاصه",
                 complimentary: "مجاني",
                 productSales: "📈 مبيعات المنتجات",
                 productName: "اسم المنتج",
