--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                 inventoryValue: "قيمة المخزون",
                 cashInStore: "النقد في المتجر",
                 cashWithAbdelhamid: "فرق الكاصه",
-                complimentary: "مجاني",
+                complimentary: "اكرام",
                 productSales: "📈 مبيعات المنتجات",
                 productName: "اسم المنتج",
                 dailyEntry: "إدخال يومي",
